--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/jest": "^26.0.20",
     "@types/node": "^14.14.27",
     "@typescript-eslint/eslint-plugin": "^4.15.0",
     "eslint": "^7.20.0",
@@ -20,7 +21,9 @@
     "eslint-plugin-standard": "^5.0.0",
     "git-commit-msg-linter": "^3.0.0",
     "husky": "^5.0.9",
+    "jest": "^26.6.3",
     "lint-staged": "^10.5.4",
+    "ts-jest": "^26.5.1",
     "typescript": "^4.1.5"
   }
 }
