--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/faker": "^5.1.6",
     "@types/jest": "^26.0.20",
     "@types/node": "^14.14.27",
@@ -30,5 +31,8 @@
     "lint-staged": "^10.5.4",
     "ts-jest": "^26.5.1",
     "typescript": "^4.1.5"
+  },
+  "dependencies": {
+    "axios": "^0.21.1"
   }
 }
