--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.3.1",
+    "eslint-plugin-react": "^7.23.1",
     "eslint-plugin-standard": "^5.0.0",
     "faker": "^5.4.0",
     "git-commit-msg-linter": "^3.0.0",
