--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/react-dom": "^17.0.3",
     "@typescript-eslint/eslint-plugin": "^4.15.0",
     "clean-webpack-plugin": "^3.0.0",
+    "css-loader": "^5.2.0",
     "eslint": "^7.20.0",
     "eslint-config-standard-with-typescript": "^11.0.1",
     "eslint-plugin-import": "^2.22.1",
@@ -32,9 +33,14 @@
     "faker": "^5.4.0",
     "git-commit-msg-linter": "^3.0.0",
     "husky": "^5.0.9",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^26.6.3",
     "lint-staged": "^10.5.4",
+    "node-sass": "^5.0.0",
+    "sass-loader": "^11.0.1",
+    "style-loader": "^2.0.0",
     "ts-jest": "^26.5.1",
+    "ts-loader": "^8.1.0",
     "typescript": "^4.1.5",
     "webpack": "^5.28.0",
     "webpack-cli": "^4.6.0",
