fix: fix some warns and errors of eslint

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,7 +14,7 @@
   ],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
-    "project":"tsconfig.json",
+    "project": "tsconfig.json",
     "ecmaFeatures": {
       "jsx": true
     },
@@ -26,10 +26,11 @@
     "@typescript-eslint",
     "react-hooks",
     "prettier",
-  "import"
+    "import"
   ],
   "rules": {
-    "import/no-extraneous-dependencies":"off",
+    "import/no-extraneous-dependencies": "off",
+    "no-useless-escape": "off",
     "react-hooks/rules-of-hooks": "error",
     "react-hooks/exhaustive-deps": "warn",
     "react/jsx-filename-extension": [
@@ -44,7 +45,7 @@
     "@typescript-eslint/no-use-before-define": [
       "error"
     ],
-    "react/react-in-jsx-scope": "off",
+    "react/react-in-jsx-scope": "off"
   },
   "settings": {
     "import/resolver": {
