fix: fix some warns and errors of eslint

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -30,6 +30,7 @@
   ],
   "rules": {
     "import/no-extraneous-dependencies": "off",
+    "@typescript-eslint/no-explicit-any": "off",
     "no-useless-escape": "off",
     "react-hooks/rules-of-hooks": "error",
     "react-hooks/exhaustive-deps": "warn",
