chore: change version of node in script

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubunto-latest
     strategy:
       matrix:
-          node-version: [12.x, 14.x, 16.x]
+          node-version: '12.x'
 
     steps:
       - name: Checkout
