--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubunto-latest
     strategy:
       matrix:
-          node-version: "12.x"
+          node-version: 12.x
     steps:
       - name: Checkout
         uses: actions/checkout@v1
