--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -7,12 +7,14 @@ on:
 jobs:
   build:
     runs-on: ubunto-latest
-    strategy:
-      matrix:
-          node-version: 12.x
     steps:
       - name: Checkout
         uses: actions/checkout@v1
+
+      - name: Use Node.js 12x
+        uses: actions/setup-node@v1
+        with:
+          node-version: 12.x
 
       - name: Code linting
         run: yarn lint
