--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test:watch": "npm test -- --watch",
     "test:ci": "npm test -- --coverage",
     "test:staged": "npm test -- --findRelatedTests",
-    "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
+    "lint": "eslint 'src/**'"
   },
   "keywords": [],
   "author": "",
