--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -16,8 +16,9 @@ jobs:
         with:
           node-version: 12.x
 
+      - name: Install dependencies
+        run: npm install
+
       - name: Code linting
         run: npm run lint
 
-      - name: Type checking
-        run: npm run lint
