chore: change script of run tests

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -23,5 +23,5 @@ jobs:
         run: npm run lint
 
       - name: Run tests
-        run: npm test:coveralls
+        run: npm run test:coveralls
 
